--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <title>Nome do site</title>
+        <title>E-sangue</title>
     </head>
     <body>
         <!-- HEADER -->
@@ -18,15 +18,17 @@
                         <img src="assets/img/icon/Logo.svg" alt="Banner" class="logo" />
 
                         <nav class="nav-container">
-                            <a href="#" class="hv-home text-color-light">Home</a>
-                            <a href="#" class="hv-servico text-color-light">Serviços</a>
-                            <a href="#" class="hv-informacao text-color-light">Informações</a>
-                            <a href="#" class="hv-contato text-color-light">Contato</a>
+                            <a href="#home" class="hv-home text-color-light">Home</a>
+                            <a href="#servicos" class="hv-servico text-color-light">Serviços</a>
+                            <a href="#informacao" class="hv-informacao text-color-light">Informações</a>
+                            <a href="#contato" class="hv-contato text-color-light">Contato</a>
                             <div class="bg-hover"></div>
                         </nav>
                         <div class="btn-container">
                             <button class="btn-cadastro">Cadastre-se</button>
-                            <button class="btn-login">Login</button>
+                            <button class="btn-login">
+                                <a href="login.html">Login</a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -119,7 +121,7 @@
             <div class="p-0 container">
                 <div class="box-video-Info">
                     <div class="box-video">
-                        <img src="assets/img/video-cover.svg" id="video" />
+                        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/97Sx0KiExZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
 
                     <div class="text-video">
@@ -133,7 +135,7 @@
 
         <!-- INFORMAÇÕES -->
 
-        <section class="info-sangue">
+        <section id="informacao" class="info-sangue">
             <div class="container">
                 <div class="box-textS">
                     <div class="box-info">
@@ -214,7 +216,7 @@
 
         <!-- CONTATO -->
 
-        <section class="bg-contato">
+        <section id="contato" class="bg-contato">
             <div class="container">
                 <div class="box-contato">
                     <h6 class="title-form text-color-dark">Contate-nos</h6>
@@ -238,7 +240,7 @@
                             <textarea id="msg" placeholder="Digite uma mensagem (Opicional)"></textarea>
                         </div>
                     </form>
-                    <button class="btn-contato bg-color-red text-color-light">Enviar</button>
+                    <button type="submit" class="btn-contato bg-color-red text-color-light">Enviar</button>
                 </div>
 
                 <div class="box-detalhe">
@@ -257,7 +259,7 @@
                     <div class="box-feedback">
                         <label for="feedback"></label>
                         <input id="feedback" name="feedback" placeholder="Escreva seu feedback...">
-                        <button class="btn-feed bg-color-red text-color-light">Enviar</button>
+                        <button type="submit" class="btn-feed bg-color-red text-color-light">Enviar</button>
                     </div>
                 </div>
 
