--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="src/assets/css/main.css" />
         <title>E-sangue</title>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <div class="p-0 container-fluid">
                 <div class="p-0 container">
                     <div class="navBar">
-                        <img src="assets/img/icon/Logo.svg" alt="Banner" class="logo" />
+                        <img src="src/assets/img/icon/Logo.svg" alt="Banner" class="logo" />
 
                         <nav class="nav-container">
                             <a href="#home" class="hv-home text-color-light">Home</a>
@@ -25,7 +25,9 @@
                             <div class="bg-hover"></div>
                         </nav>
                         <div class="btn-container">
-                            <button class="btn-cadastro">Cadastre-se</button>
+                            <button class="btn-cadastro">
+                                <a href="cadastro.html">Cadastre-se</a>
+                            </button>
                             <button class="btn-login">
                                 <a href="login.html">Login</a>
                             </button>
@@ -36,7 +38,6 @@
         </header>
 
         <!-- HOME -->
-
         <section id="home">
             <div class="banner">
                 <div class="container">
@@ -47,7 +48,7 @@
                             <button class="btn-banner">Agendar</button>
                         </div>
                         <div class="scroll-Down">
-                            <img src="assets/img/icon/scroll-down.svg" alt="Rolar para baixo" />
+                            <img src="src/assets/img/icon/scroll-down.svg" alt="Rolar para baixo" />
                             <p class="text-color-light">Rolar para baixo</p>
                         </div>
                     </div>
@@ -56,7 +57,6 @@
         </section>
 
         <!-- SERVIÇOS -->
-
         <section id="servicos">
             <div class="container">
                 <div class="row">
@@ -73,7 +73,7 @@
                             <div class="p-0 row justify-content-end">
                                 <div class="p-3 col-sm-6 bg-color-red card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-agendamento.svg" alt="icone de Calendario" class="icon-card" />
+                                        <img src="src/assets/img/icon/icon-agendamento.svg" alt="icone de Calendario" class="icon-card" />
                                         <h5 class="text-color-light">Agende sua doação</h5>
 
                                         <p class="text-color-light">Agende aqui sua doação, sem problemas e com as facilidades que dispomos no site.</p>
@@ -82,7 +82,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-info.svg" alt="icone de Informação" class="icon-card" />
+                                        <img src="src/assets/img/icon/icon-info.svg" alt="icone de Informação" class="icon-card" />
                                         <h5 class="text-color-dark">Informe-se</h5>
 
                                         <p class="text-color-dark">Tem duvidas? fale conosco através do e-mail ou telefoneque que ajudamos você.</p>
@@ -93,7 +93,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-bs.svg" alt="Icone do Banco de Sangue" class="icon-card" />
+                                        <img src="src/assets/img/icon/icon-bs.svg" alt="Icone do Banco de Sangue" class="icon-card" />
                                         <h5 class="text-color-dark">Banco de Sangue</h5>
 
                                         <p class="text-color-dark">Veja na seção banco de sangue o que precisamos para ser doado e o que ofertamos aos receptores.</p>
@@ -102,7 +102,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-feedback.svg" alt="Icone de Feedback" class="icon-card" />
+                                        <img src="src/assets/img/icon/icon-feedback.svg" alt="Icone de Feedback" class="icon-card" />
                                         <h5 class="text-color-dark">Envie seu feedback</h5>
 
                                         <p class="text-color-dark">Gostou dos nossos serviços? tem alguma sugestão ou reclamação por favor nos envie sua opinião.</p>
@@ -116,7 +116,6 @@
         </section>
 
         <!-- VIDEO -->
-
         <section class="banner-video">
             <div class="p-0 container">
                 <div class="box-video-Info">
@@ -134,7 +133,6 @@
         </section>
 
         <!-- INFORMAÇÕES -->
-
         <section id="informacao" class="info-sangue">
             <div class="container">
                 <div class="box-textS">
@@ -151,49 +149,47 @@
                         <div class="lineIn2 bg-color-red"></div>
                     </div>
                     <div class="box-svg-info">
-                        <img src="assets/img/svg-home.svg" alt="Ilustração de Proficionais de Saúde" />
+                        <img src="src/assets/img/svg-home.svg" alt="Ilustração de Proficionais de Saúde" />
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- GAELRIA -->
-
         <section class="galeria">
             <div class="container">
                 <div class="p-0 row">
-                    <img src="assets/img/img1.png" alt="" class="img-galeria col-sm-5 p-0" />
-                    <img src="assets/img/img2.png" alt="" class="img-galeria col-sm-3 p-0" />
-                    <img src="assets/img/img3.png" alt="" class="img-galeria col-sm-4 p-0" />
+                    <img src="src/assets/img/img1.png" alt="" class="img-galeria col-sm-5 p-0" />
+                    <img src="src/assets/img/img2.png" alt="" class="img-galeria col-sm-3 p-0" />
+                    <img src="src/assets/img/img3.png" alt="" class="img-galeria col-sm-4 p-0" />
                 </div>
                 <div class="p-0 row">
-                    <img src="assets/img/img4.png" alt="" class="img-galeria col-sm-4 p-0" />
-                    <img src="assets/img/img5.png" alt="" class="img-galeria col-sm-3 p-0" />
-                    <img src="assets/img/img6.png" alt="" class="img-galeria col-sm-5 p-0" />
+                    <img src="src/assets/img/img4.png" alt="" class="img-galeria col-sm-4 p-0" />
+                    <img src="src/assets/img/img5.png" alt="" class="img-galeria col-sm-3 p-0" />
+                    <img src="src/assets/img/img6.png" alt="" class="img-galeria col-sm-5 p-0" />
                 </div>
             </div>
         </section>
 
         <!-- AVALIAÇÃO -->
-
         <section class="avaliacao">
             <div class="container-fluid">
                 <h5 class="title text-color-dark">O que nossos usuários estão falando?</h5>
                 <div class="container">
                     <div class="card-avaliacao col-sm-3 space-card">
-                        <img src="assets/img/perfil-1.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="src/assets/img/perfil-1.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-dark">Alexandre Medeiro</h6>
                         <p class="text text-color-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ipsum voluptatibus repellendus atque? Quia veritatis, amet, eligendi qui error iure natus facere cupiditate voluptate laborum vitae labore quidem iste iusto?</p>
                     </div>
 
                     <div class="card-avaliacao col-sm-3 offset-1 bg-color-red">
-                        <img src="assets/img/perfil-2.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="src/assets/img/perfil-2.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-light">Malena da Silva</h6>
                         <p class="text text-color-light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam eveniet, saepe praesentium nesciunt quis vero cum corrupti aperiam molestiae recusandae quaerat ipsum ut odio veniam tempora tempore in voluptas aut.</p>
                     </div>
 
                     <div class="card-avaliacao col-sm-3 offset-1 space-card">
-                        <img src="assets/img/perfil-3.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="src/assets/img/perfil-3.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-dark">Jailson Terceiro</h6>
                         <p class="text text-color-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eos eveniet molestiae, excepturi tempore ipsum magnam ut vitae similique consequatur animi quos praesentium, officiis dolorum quaerat exercitationem illo possimus. Sequi?</p>
                     </div>
@@ -202,20 +198,18 @@
         </section>
 
         <!-- LOGO MARCAS -->
-
         <section class="box-logo-hemocentro">
             <div class="p-md-0 container">
                 <div class="line-logos bg-color-red"></div>
                 <div class="box-logo">
-                    <img src="assets/img/logo-hemope.svg" alt="Logo do Hemope" />
-                    <img src="assets/img/logo-ihene.svg" alt="Logo do IHENE" />
-                    <img src="assets/img/logo-gsh.svg" alt="Logo do Grupo GSH Hemocentro" />
+                    <img src="src/assets/img/logo-hemope.svg" alt="Logo do Hemope" />
+                    <img src="src/assets/img/logo-ihene.svg" alt="Logo do IHENE" />
+                    <img src="src/assets/img/logo-gsh.svg" alt="Logo do Grupo GSH Hemocentro" />
                 </div>
             </div>
         </section>
 
         <!-- CONTATO -->
-
         <section id="contato" class="bg-contato">
             <div class="container">
                 <div class="box-contato">
@@ -248,11 +242,11 @@
                     <p class="text">Contate-nos através do e-mail ou número.</p>
                     <div class="box-det-contato">
                         <div class="email-det">
-                           <img src="assets/img/icon/email.svg" alt="Icone de Email"> 
+                           <img src="src/assets/img/icon/email.svg" alt="Icone de Email"> 
                            <p class="text-color-dark">Banco.de.sangue@gmail.com</p>
                         </div>
                         <div class="telefone-det">
-                            <img src="assets/img/icon/telephone.svg" alt="Icone de Email"> 
+                            <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email"> 
                             <p class="text-color-dark">(81) 00000-0000</p>
                         </div>
                     </div>
@@ -267,7 +261,6 @@
         </section>
 
         <!-- FOOTER -->
-
         <footer>
             <div class="bg-footer bg-color-red">
                 <div class="p-md-0 container">
@@ -289,10 +282,10 @@
                         <div class="seguir">
                             <h6 class="title-footer text-color-light">Redes Sociais</h6>
                             <div class="redes-sociais">
-                                <img src="assets/img/icon/instagram.svg" alt="Instagram" />
-                                <img src="assets/img/icon/facebook.svg" alt="Facebook" />
-                                <img src="assets/img/icon/twitter.svg" alt="Twitter" />
-                                <img src="assets/img/icon/linkedin.svg" alt="Linkedin" />
+                                <img src="src/assets/img/icon/instagram.svg" alt="Instagram" />
+                                <img src="src/assets/img/icon/facebook.svg" alt="Facebook" />
+                                <img src="src/assets/img/icon/twitter.svg" alt="Twitter" />
+                                <img src="src/assets/img/icon/linkedin.svg" alt="Linkedin" />
                             </div>
                         </div>
                     </div>
@@ -300,6 +293,6 @@
             </div>
         </footer>
 
-        <script type="text/javascript" src="assets/js/main.js"></script>
+        <script type="text/javascript" src="src/assets/js/main.js"></script>
     </body>
 </html>
