--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="assets/css/loginStyle.css" />
-        <title>E-sangue</title>
+        <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="src/assets/css/loginStyle.css" />
+        <title>Login</title>
     </head>
     <body>
         <section class="container-login">
@@ -20,8 +20,8 @@
 
                     <div class="box-form">
                         <form>
-                            <label for="cpf">
-                                <input class="input-cpf" type="text" id="cpf" name="CPF" placeholder="CPF" required />
+                            <label for="email">
+                                <input class="input-email" type="email" id="email" name="email" placeholder="E-mail" required />
                             </label>
 
                             <label for="password">
@@ -45,14 +45,14 @@
                     <div class="navBar">
                         <nav class="nav-container">
                             <a href="Index.html" class="hv-home text-color-light">Home</a>
-                            <a href="#" class="hv-servico text-color-light">Login</a>
-                            <a href="#" class="hv-informacao text-color-light">Cadastro</a>
+                            <a href="login.html" class="hv-servico text-color-light">Login</a>
+                            <a href="cadastro.html" class="hv-informacao text-color-light">Cadastro</a>
                         </nav>
-                        <img src="assets/img/icon/Logo.svg" alt="Logo E-sangue" class="logo" />
+                        <img src="src/assets/img/icon/Logo.svg" alt="Logo E-sangue" class="logo" />
                     </div>
                 </header>
 
-                <img class="svg" src="assets/img/svg-login.svg" alt="Ilustração" />
+                <img class="svg" src="src/assets/img/svg-login.svg" alt="Ilustração" />
             </div>
         </section>
     </body>
