Adicionado a rotar de login e agendamento
Pagina de agendamento criada

Pagina de home, login e agendamento linkados.

Agendamento só e possível após o login.

Estrutura de organização do projeto foi alterado.

--- a/pages/home/Index.html
+++ b/pages/home/Index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="../../assets/css/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="../../assets/css/main.css" />
         <title>E-sangue</title>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <div class="p-0 container-fluid">
                 <div class="p-0 container">
                     <div class="navBar">
-                        <img src="assets/img/icon/Logo.svg" alt="Banner" class="logo" />
+                        <img src="../../assets/img/icon/Logo.svg" alt="Banner" class="logo" />
 
                         <nav class="nav-container">
                             <a href="#home" class="hv-home text-color-light">Home</a>
@@ -27,7 +27,7 @@
                         <div class="btn-container">
                             <button class="btn-cadastro">Cadastre-se</button>
                             <button class="btn-login">
-                                <a href="login.html">Login</a>
+                                <a href="../login/login.html">Login</a>
                             </button>
                         </div>
                     </div>
@@ -44,10 +44,10 @@
                         <div class="box-text">
                             <h3 class="title-banner text-color-light">Agende sua doação!</h3>
                             <p class="text-banner text-color-light">Faça sua parte, agende aqui sua doação. doar é um ato de amor e salva vidas, a cada doação você salva ate quatro pessoas. o ato de doar nao traz nenhum maleficio a sua saúde pois o seu corpo se auto organiza positivamente.</p>
-                            <button class="btn-banner">Agendar</button>
+                            <button id="btnAgendar" class="btn-banner">Agendar</button>
                         </div>
                         <div class="scroll-Down">
-                            <img src="assets/img/icon/scroll-down.svg" alt="Rolar para baixo" />
+                            <img src="../../assets/img/icon/scroll-down.svg" alt="Rolar para baixo" />
                             <p class="text-color-light">Rolar para baixo</p>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <div class="p-0 row justify-content-end">
                                 <div class="p-3 col-sm-6 bg-color-red card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-agendamento.svg" alt="icone de Calendario" class="icon-card" />
+                                        <img src="../../assets/img/icon/icon-agendamento.svg" alt="icone de Calendario" class="icon-card" />
                                         <h5 class="text-color-light">Agende sua doação</h5>
 
                                         <p class="text-color-light">Agende aqui sua doação, sem problemas e com as facilidades que dispomos no site.</p>
@@ -82,7 +82,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-info.svg" alt="icone de Informação" class="icon-card" />
+                                        <img src="../../assets/img/icon/icon-info.svg" alt="icone de Informação" class="icon-card" />
                                         <h5 class="text-color-dark">Informe-se</h5>
 
                                         <p class="text-color-dark">Tem duvidas? fale conosco através do e-mail ou telefoneque que ajudamos você.</p>
@@ -93,7 +93,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-bs.svg" alt="Icone do Banco de Sangue" class="icon-card" />
+                                        <img src="../../assets/img/icon/icon-bs.svg" alt="Icone do Banco de Sangue" class="icon-card" />
                                         <h5 class="text-color-dark">Banco de Sangue</h5>
 
                                         <p class="text-color-dark">Veja na seção banco de sangue o que precisamos para ser doado e o que ofertamos aos receptores.</p>
@@ -102,7 +102,7 @@
 
                                 <div class="p-3 col-sm-6 card">
                                     <div class="box-interno">
-                                        <img src="assets/img/icon/icon-feedback.svg" alt="Icone de Feedback" class="icon-card" />
+                                        <img src="../../assets/img/icon/icon-feedback.svg" alt="Icone de Feedback" class="icon-card" />
                                         <h5 class="text-color-dark">Envie seu feedback</h5>
 
                                         <p class="text-color-dark">Gostou dos nossos serviços? tem alguma sugestão ou reclamação por favor nos envie sua opinião.</p>
@@ -151,7 +151,7 @@
                         <div class="lineIn2 bg-color-red"></div>
                     </div>
                     <div class="box-svg-info">
-                        <img src="assets/img/svg-home.svg" alt="Ilustração de Proficionais de Saúde" />
+                        <img src="../../assets/img/svg-home.svg" alt="Ilustração de Proficionais de Saúde" />
                     </div>
                 </div>
             </div>
@@ -162,14 +162,14 @@
         <section class="galeria">
             <div class="container">
                 <div class="p-0 row">
-                    <img src="assets/img/img1.png" alt="" class="img-galeria col-sm-5 p-0" />
-                    <img src="assets/img/img2.png" alt="" class="img-galeria col-sm-3 p-0" />
-                    <img src="assets/img/img3.png" alt="" class="img-galeria col-sm-4 p-0" />
+                    <img src="../../assets/img/img1.png" alt="" class="img-galeria col-sm-5 p-0" />
+                    <img src="../../assets/img/img2.png" alt="" class="img-galeria col-sm-3 p-0" />
+                    <img src="../../assets/img/img3.png" alt="" class="img-galeria col-sm-4 p-0" />
                 </div>
                 <div class="p-0 row">
-                    <img src="assets/img/img4.png" alt="" class="img-galeria col-sm-4 p-0" />
-                    <img src="assets/img/img5.png" alt="" class="img-galeria col-sm-3 p-0" />
-                    <img src="assets/img/img6.png" alt="" class="img-galeria col-sm-5 p-0" />
+                    <img src="../../assets/img/img4.png" alt="" class="img-galeria col-sm-4 p-0" />
+                    <img src="../../assets/img/img5.png" alt="" class="img-galeria col-sm-3 p-0" />
+                    <img src="../../assets/img/img6.png" alt="" class="img-galeria col-sm-5 p-0" />
                 </div>
             </div>
         </section>
@@ -181,19 +181,19 @@
                 <h5 class="title text-color-dark">O que nossos usuários estão falando?</h5>
                 <div class="container">
                     <div class="card-avaliacao col-sm-3 space-card">
-                        <img src="assets/img/perfil-1.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="../../assets/img/perfil-1.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-dark">Alexandre Medeiro</h6>
                         <p class="text text-color-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ipsum voluptatibus repellendus atque? Quia veritatis, amet, eligendi qui error iure natus facere cupiditate voluptate laborum vitae labore quidem iste iusto?</p>
                     </div>
 
                     <div class="card-avaliacao col-sm-3 offset-1 bg-color-red">
-                        <img src="assets/img/perfil-2.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="../../assets/img/perfil-2.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-light">Malena da Silva</h6>
                         <p class="text text-color-light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam eveniet, saepe praesentium nesciunt quis vero cum corrupti aperiam molestiae recusandae quaerat ipsum ut odio veniam tempora tempore in voluptas aut.</p>
                     </div>
 
                     <div class="card-avaliacao col-sm-3 offset-1 space-card">
-                        <img src="assets/img/perfil-3.svg" alt="Imagem do Usúario" class="Perfil-img" />
+                        <img src="../../assets/img/perfil-3.svg" alt="Imagem do Usúario" class="Perfil-img" />
                         <h6 class="text-color-dark">Jailson Terceiro</h6>
                         <p class="text text-color-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eos eveniet molestiae, excepturi tempore ipsum magnam ut vitae similique consequatur animi quos praesentium, officiis dolorum quaerat exercitationem illo possimus. Sequi?</p>
                     </div>
@@ -207,9 +207,9 @@
             <div class="p-md-0 container">
                 <div class="line-logos bg-color-red"></div>
                 <div class="box-logo">
-                    <img src="assets/img/logo-hemope.svg" alt="Logo do Hemope" />
-                    <img src="assets/img/logo-ihene.svg" alt="Logo do IHENE" />
-                    <img src="assets/img/logo-gsh.svg" alt="Logo do Grupo GSH Hemocentro" />
+                    <img src="../../assets/img/logo-hemope.svg" alt="Logo do Hemope" />
+                    <img src="../../assets/img/logo-ihene.svg" alt="Logo do IHENE" />
+                    <img src="../../assets/img/logo-gsh.svg" alt="Logo do Grupo GSH Hemocentro" />
                 </div>
             </div>
         </section>
@@ -248,11 +248,11 @@
                     <p class="text">Contate-nos através do e-mail ou número.</p>
                     <div class="box-det-contato">
                         <div class="email-det">
-                           <img src="assets/img/icon/email.svg" alt="Icone de Email"> 
+                           <img src="../../assets/img/icon/email.svg" alt="Icone de Email">
                            <p class="text-color-dark">Banco.de.sangue@gmail.com</p>
                         </div>
                         <div class="telefone-det">
-                            <img src="assets/img/icon/telephone.svg" alt="Icone de Email"> 
+                            <img src="../../assets/img/icon/telephone.svg" alt="Icone de Email">
                             <p class="text-color-dark">(81) 00000-0000</p>
                         </div>
                     </div>
@@ -289,10 +289,10 @@
                         <div class="seguir">
                             <h6 class="title-footer text-color-light">Redes Sociais</h6>
                             <div class="redes-sociais">
-                                <img src="assets/img/icon/instagram.svg" alt="Instagram" />
-                                <img src="assets/img/icon/facebook.svg" alt="Facebook" />
-                                <img src="assets/img/icon/twitter.svg" alt="Twitter" />
-                                <img src="assets/img/icon/linkedin.svg" alt="Linkedin" />
+                                <img src="../../assets/img/icon/instagram.svg" alt="Instagram" />
+                                <img src="../../assets/img/icon/facebook.svg" alt="Facebook" />
+                                <img src="../../assets/img/icon/twitter.svg" alt="Twitter" />
+                                <img src="../../assets/img/icon/linkedin.svg" alt="Linkedin" />
                             </div>
                         </div>
                     </div>
@@ -300,6 +300,6 @@
             </div>
         </footer>
 
-        <script type="text/javascript" src="assets/js/main.js"></script>
+        <script src="../../dist/main.bundle.js"></script>
     </body>
 </html>
