Revert "Adicionado a rotar de login e agendamento"
This reverts commit b42613bee0ebb8568905fa01c3ff1ab1f01e544e.

--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="../../assets/css/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="../../assets/css/loginStyle.css" />
+        <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="assets/css/loginStyle.css" />
         <title>E-sangue</title>
     </head>
     <body>
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="box-form">
-                        <form id="login-form">
+                        <form>
                             <label for="cpf">
                                 <input class="input-cpf" type="text" id="cpf" name="CPF" placeholder="CPF" required />
                             </label>
@@ -35,7 +35,7 @@
                         <label class="text" for="check">Lembrar?</label>
                         <a class="text" href="#">Esqueceu sua senha?</a>
                     </div>
-                    <button id="login-btn" type="submit">Login</button>
+                    <button type="submit">Login</button>
                     <p class="text">Não possui cadastro?<a class="link-cadastro" href="#">Cadastre-se aqui</a></p>
                 </div>
             </div>
@@ -48,14 +48,12 @@
                             <a href="#" class="hv-servico text-color-light">Login</a>
                             <a href="#" class="hv-informacao text-color-light">Cadastro</a>
                         </nav>
-                        <img src="../../assets/img/icon/Logo.svg" alt="Logo E-sangue" class="logo" />
+                        <img src="assets/img/icon/Logo.svg" alt="Logo E-sangue" class="logo" />
                     </div>
                 </header>
 
-                <img class="svg" src="../../assets/img/svg-login.svg" alt="Ilustração" />
+                <img class="svg" src="assets/img/svg-login.svg" alt="Ilustração" />
             </div>
         </section>
-
-        <script src="../../dist/login.bundle.js"></script>
     </body>
 </html>
