Adicionado a rotar de home, login e agendamento
Pagina de agendamento criada

Pagina de home, login e agendamento linkados.

Agendamento só e possível após o login.

Conflitos resolvidos

--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
                         <div class="box-text">
                             <h3 class="title-banner text-color-light">Agende sua doação!</h3>
                             <p class="text-banner text-color-light">Faça sua parte, agende aqui sua doação. doar é um ato de amor e salva vidas, a cada doação você salva ate quatro pessoas. o ato de doar nao traz nenhum maleficio a sua saúde pois o seu corpo se auto organiza positivamente.</p>
-                            <button class="btn-banner">Agendar</button>
+                            <button id="btnAgendar" class="btn-banner">Agendar</button>
                         </div>
                         <div class="scroll-Down">
                             <img src="src/assets/img/icon/scroll-down.svg" alt="Rolar para baixo" />
@@ -242,11 +242,11 @@
                     <p class="text">Contate-nos através do e-mail ou número.</p>
                     <div class="box-det-contato">
                         <div class="email-det">
-                           <img src="src/assets/img/icon/email.svg" alt="Icone de Email"> 
+                           <img src="src/assets/img/icon/email.svg" alt="Icone de Email">
                            <p class="text-color-dark">Banco.de.sangue@gmail.com</p>
                         </div>
                         <div class="telefone-det">
-                            <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email"> 
+                            <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email">
                             <p class="text-color-dark">(81) 00000-0000</p>
                         </div>
                     </div>
@@ -293,6 +293,6 @@
             </div>
         </footer>
 
-        <script type="text/javascript" src="src/assets/js/main.js"></script>
+        <script type="text/javascript" src="dist/main.bundle.js"></script>
     </body>
 </html>
