--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="box-form">
-                        <form>
+                        <form id="login-form">
                             <label for="email">
                                 <input class="input-email" type="email" id="email" name="email" placeholder="E-mail" required />
                             </label>
@@ -35,7 +35,7 @@
                         <label class="text" for="check">Lembrar?</label>
                         <a class="text" href="#">Esqueceu sua senha?</a>
                     </div>
-                    <button type="submit">Login</button>
+                    <button id="login-btn" type="submit">Login</button>
                     <p class="text">Não possui cadastro?<a class="link-cadastro" href="#">Cadastre-se aqui</a></p>
                 </div>
             </div>
@@ -55,5 +55,7 @@
                 <img class="svg" src="src/assets/img/svg-login.svg" alt="Ilustração" />
             </div>
         </section>
+
+        <script type="text/javascript" src="dist/login.bundle.js"></script>
     </body>
 </html>
