--- a/cadastro.html
+++ b/cadastro.html
@@ -90,7 +90,7 @@
                     </form>
                     <div class="check">
                         <input class="checkbox" type="checkbox" id="Temos" name="Temos" />
-                        <label class="text" for="check">Concordo com todos os termos.?</label>
+                        <label class="text" for="check">Concordo com todos os termos?</label>
                     </div>
                     <button type="submit">Finalizar cadastro</button>
 
