--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                         <a class="text" href="#">Esqueceu sua senha?</a>
                     </div>
                     <button id="login-btn" type="submit">Login</button>
-                    <p class="text">Não possui cadastro?<a class="link-cadastro" href="#">Cadastre-se aqui</a></p>
+                    <p class="text">Não possui cadastro?<a class="link-cadastro" href="cadastro.html">Cadastre-se aqui</a></p>
                 </div>
             </div>
 
